Anshul, Ruslan and Willem joined CCExtractor to work on a number of things
over the summer, and their work is already reaching the mainstream 
version of CCExtractor.

- Added a huge dictionary submitted by Matt Stockard.
- Added DVB subtitles decoder, spupng in output
- Added support for cdt2 media atoms in QT video files. Now multiple atoms in
 a single sample sequence are supported.

0.69
----
- A few patches from Christopher Small, including proper support
  for multiple multicast clients listening on the same port.
- GUI: Fixed teletext preview.
- GUI: Added a small indicator of data being received when reading from
  UDP.
- GUI: Added UTF-8 support to preview Window (used for teletext).
- Fixes in Makefile and build script, compilation in linux and OSX failed
  if another libpng was found in the system.
- WTV support directly in CCExtractor (no need for wtvccdump any more).
- Started refactoring and clean-up.
- Fix: MPEG clock rollover (happens each 26 hours) caused a time
  discontinuity.
- Windows GUI: Started work on HDHomeRun support. For now it just looks 
  for HDHomeRun devices. Lots of other things will arrive in the next
  versions.
- Windows GUI: Some code refactoring, since the HDHomeRun support makes
  the code larger enough to require more than one source file :-)

0.68
----
- A couple of shared variables between 608 decoders were causing
  problems when both fields were processed at the same time with
  -12, fixed.
- Added BOM for UTF-8 files.
- Corrected a few extended characters in the UTF-8 encoding,
  probably never used in real world captioning but since we got
  a good test sample file...
- Color and fonts in PAC commands were ignored, fixed (Helen Buus).
- Added a new output format, spupng. It consists on one .png file
  for each subtitle frame and one .xml with all the timing 
  (Heleen Buus).
- Some fixes (Chris Small).

0.67
----
- Padding bytes were being discarded early in the process in 0.66,